Update clients/src/main/java/org/apache/kafka/clients/consumer/internals/StreamsRebalanceData.java
Co-authored-by: PoAn Yang <yangpoan@gmail.com>